* Thu Sep 13 2018 Nick Miller <Nick.miller@onyxpoint.com> - 7.1.1-0
- Add support for Puppet 5 and OEL
- Add reference.md
- Move user/group management to it's own manifest, allowing for easier
  ordering

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 7.1.1-0
- Updated $app_pki_external_source to accept any string. This matches the
  functionality of pki::copy.

* Wed Nov 15 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.0-0
- By default, use TLS 1.2 instead of TLS 1.0.
- Eliminate the use of deprecated validate_net_list() through
  better strongly-typed parameters for IP addresses and hosts.
- Add CentOS 6 acceptance tests.

* Tue Nov 14 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.1.0-0
- Update acceptance test to work on server with selinux enforcing

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Confine puppet version in metadata.json

* Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- New pki scheme
- Real integers and simplib types implemented
- Application certs now managed in /etc/pki/simp_apps/vsftpd/x509

* Tue Dec 20 2016 Nick Miller <nick.miller@onyxpoint.com> 7.0.0-0
- Added management of the /etc/ftpusers file

* Mon Dec 12 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Use simp_options module for global catalysts
- Fixed bug whereby manifest would fail to compile if the force_dot_files
  parameter of ::vsftpd::config was set
- Fixed bug whereby vsftpd.conf configuration values to be set to 'NO'
  were not written out to that file
- Fixed bug whereby listen configuration parameter for vsftpd.conf was
  not set based on $listen_ipv4 parameter of ::vsftpd
- Convert to explicit parameter types

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-0
- Remove compliance map and General Housekeeping
