@@ -230,42 +230,42 @@ default-fips:
     - bundle exec rake spec_clean
     - bundle exec rake beaker:suites[default]
 
-default-oel:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  variables:
-    PUPPET_VERSION: '~> 4.10.0'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
-
-default-oel-puppet5:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '~> 5.3'
-    PUPPET_BEAKER_COLLECTION: 'puppet5'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
-
-default-oel-fips:
-  stage: acceptance
-  tags:
-    - beaker
-  <<: *cache_bundler
-  <<: *setup_bundler_env
-  <<: *only_with_SIMP_FULL_MATRIX
-  variables:
-    PUPPET_VERSION: '~> 4.10.0'
-    BEAKER_fips: 'yes'
-  script:
-    - bundle exec rake spec_clean
-    - bundle exec rake beaker:suites[default,oel]
+# default-oel:
+#   stage: acceptance
+#   tags:
+#     - beaker
+#   <<: *cache_bundler
+#   <<: *setup_bundler_env
+#   variables:
+#     PUPPET_VERSION: '~> 4.10.0'
+#   script:
+#     - bundle exec rake spec_clean
+#     - bundle exec rake beaker:suites[default,oel]
+#
+# default-oel-puppet5:
+#   stage: acceptance
+#   tags:
+#     - beaker
+#   <<: *cache_bundler
+#   <<: *setup_bundler_env
+#   <<: *only_with_SIMP_FULL_MATRIX
+#   variables:
+#     PUPPET_VERSION: '~> 5.3'
+#     PUPPET_BEAKER_COLLECTION: 'puppet5'
+#   script:
+#     - bundle exec rake spec_clean
+#     - bundle exec rake beaker:suites[default,oel]
+#
+# default-oel-fips:
+#   stage: acceptance
+#   tags:
+#     - beaker
+#   <<: *cache_bundler
+#   <<: *setup_bundler_env
+#   <<: *only_with_SIMP_FULL_MATRIX
+#   variables:
+#     PUPPET_VERSION: '~> 4.10.0'
+#     BEAKER_fips: 'yes'
+#   script:
+#     - bundle exec rake spec_clean
+#     - bundle exec rake beaker:suites[default,oel]
