@@ -60,13 +60,6 @@
         "6",
         "7"
       ]
-    },
-    {
-      "operatingsystem": "OracleLinux",
-      "operatingsystemrelease": [
-        "6",
-        "7"
-      ]
     }
   ],
   "requirements": [
