@@ -1,8 +1,9 @@
 * Thu Sep 13 2018 Nick Miller <Nick.miller@onyxpoint.com> - 7.1.1-0
-- Add support for Puppet 5 and OEL
+- Add support for Puppet 5
 - Add reference.md
 - Move user/group management to it's own manifest, allowing for easier
   ordering
+- Add some OEL content but not declaring support for it yet
 
 * Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 7.1.1-0
 - Updated $app_pki_external_source to accept any string. This matches the
